end the depot form

--- a/templates/client/_form.html.twig
+++ b/templates/client/_form.html.twig
@@ -93,7 +93,7 @@
 	</div>
 </div>
 <div class="mb-3 text-center" >
-    <button class="btn btn-primary">
+    <button class="btn btn-primary btn-lg">
         <img class="delete" width='28px' src="{{asset('/images/icon-update.png')}}"/>
     </button>
 </div>
