--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -212,9 +212,9 @@
 
     </div>
     <div style="padding-top: 80px !important; text-align:center" class="btns">
-        <a class="btn btn-warning" href="{{ path('prioritaire_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-important.png')}}"/></a>
-        <a class="btn btn-primary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-        <a class="btn btn-dark" href="{{ path('tache_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-add-entretien.png')}}"/></a>
+        <a class="btn btn-warning btn-lg" href="{{ path('prioritaire_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-important.png')}}"/></a>
+        <a class="btn btn-primary btn-lg" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
+        <a class="btn btn-dark btn-lg" href="{{ path('tache_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-add-entretien.png')}}"/></a>
         {{ include('client/_delete_form.html.twig') }}
     </div>
     
