--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -98,12 +98,13 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="form-check">
+				<div class="form-check inline">
 
 					{{form_widget(form.cu)}}
-					 {{form_label(form.cu,null,{ 'attr': {  'class' : 'form-control rounded-1 cu required'} })}}
-				 
+					{{form_label(form.cu,null,{ 'attr': {  'class' : 'form-control rounded-1 cu inline required'} })}}
+				 	
 				</div>
+				&nbsp; <a class="inline" href="{{path('condition')}}">  conditions de prise en charge</a>
 			</div>
 			<div class="mb-3 mt-5 text-center">
 				<button type="submit" class="btn btn-dark btn-depot submit" >Valider</button>
