--- a/templates/prioritaire/index.html.twig
+++ b/templates/prioritaire/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Prioritaire{% endblock %}
 
 {% block body %}
-{% include 'layout/navbar.html.twig' %}
-    <div class="container mb-100">
+ {% include 'layout/navbar.html.twig' %}
+        <div class="container mb-100">
             <h1>Clients Prioritaires</h1>
            
             <table class="table">
@@ -55,7 +55,7 @@
                         <td class="td-button">
                             {{ include('prioritaire/_delete_form.html.twig') }}
                             
-                            <a class="btn btn-success"href="{{ path('client_show', {'id': prioritaire.appareil.client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-success btn-lg"href="{{ path('client_show', {'id': prioritaire.appareil.client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
                         </td>
                     </tr>
                 {% else %}
@@ -67,7 +67,7 @@
             </table>
             
             
-            <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+            <a  class="btn btn-success btn-lg" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
         </div>
         {% include 'layout/footer.html.twig' %}
 
