--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,10 +3,9 @@
 {% block title %}Membres{% endblock %}
 
 {% block body %}
-{% include 'layout/navbar.html.twig' %}
-    <div class="container mb-100">
+    {% include 'layout/navbar.html.twig' %}
+        <div class="container mb-100">
         <h1>Membres</h1>
-        <div class="container-fluid">
             <table class="table">
                 <thead>
                     <tr  class='table_head'>
@@ -29,7 +28,7 @@
                             <td>{{ user.login }}</td>
                             <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                             <td>
-                            <a class="btn btn-success" href="{{ path('user_show', {'id': user.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-success btn-lg" href="{{ path('user_show', {'id': user.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
                             {{ include('user/_delete_form.html.twig') }}
                             </td>
                         </tr>
@@ -41,8 +40,8 @@
                 {% endfor %}
                 </tbody>
             </table>
-            <a  class="btn btn-success" href="{{ path('user_new') }}"><img class="new" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+            <a  class="btn btn-success btn-lg" href="{{ path('user_new') }}"><img class="new" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+
         </div>
-    </div>
-    {% include 'layout/footer.html.twig' %}as
+        {% include 'layout/footer.html.twig' %}
 {% endblock %}
