--- a/templates/depot/condition.html.twig
+++ b/templates/depot/condition.html.twig
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block body %}
     <div class="container-fluid mb-100">
-		<a  href="{{ path('formulaire_de_depot') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
-		<img class="img-center" src="{{asset('/images/azertylogo.png')}}"/>
+		<a  href="{{ path('formulaire_de_depot') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
+		<img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
 		<h1 class="mt-3">Condition de prise en charge AZERTY</h1>
             <div class="container">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
