--- a/templates/prioritaire/edit.html.twig
+++ b/templates/prioritaire/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Prioritaire{% endblock %}
+{% block title %}Modifier Prioritaire{% endblock %}
 
 {% block body %}
-    <h1>Edit Prioritaire</h1>
+    <h1>Modifier Prioritaire</h1>
 
     {{ include('prioritaire/_form.html.twig', {'button_label': 'Update'}) }}
 
