--- a/templates/prioritaire/new.html.twig
+++ b/templates/prioritaire/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Prioritaire{% endblock %}
+{% block title %}Nouveau Prioritaire{% endblock %}
 
 {% block body %}
-    <h1>Create new Prioritaire</h1>
+    <h1>Nouveau Prioritaire</h1>
 
     {{ include('prioritaire/_form.html.twig') }}
 
