--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
            
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-            <link rel="icon" type="image/png" sizes="16x16" href="{{asset('/images/azerty.jpg')}}">
+            <link rel="icon" type="image/png" sizes="16x16" href="{{asset('./images/azerty.jpg')}}">
         {% endblock %}
          {% block javascripts %}
              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -35,7 +35,7 @@
    
         {% block body %}
           
-        <img src="{{asset('/images/pdf.jpg')}}" />
+        <img src="{{asset('./images/pdf.jpg')}}" />
         {% endblock %}
        
        
