--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 {% include 'layout/navbar.html.twig' %}
 <div class="container-fluid mb-100">
- <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+ <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
 
         <h1 style="margin-top: 45px !important;">Crée un nouveau client</h1>
         <div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
