--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -42,9 +42,9 @@
                         <td>{{ client.appareil.ns }} </td>
                         <td>{{ client.appareil.mdp }} </td>
                         {% if client.appareil.chargeur == 1 %}
-                        <td> <img  class='check' src="{{asset('/images/check.png')}}"/></td>
+                        <td> <img  class='check' src="{{asset('./images/check.png')}}"/></td>
                         {% else %}
-                        <td>  <img  class='cross' src="{{asset('/images/cross.png')}}"/></td>
+                        <td>  <img  class='cross' src="{{asset('./images/cross.png')}}"/></td>
                         {% endif %}
                         {% if client.appareil.editeur.etat.statut is defined %}
                         <td>{{ client.appareil.editeur.etat.statut}}</td>
@@ -54,9 +54,9 @@
                         
 
                         <td class="td-button">
-                            <a class="btn btn-success btn-lg" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
-                            <a class="btn btn-secondary btn-lg" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-                            <a class="btn btn-info btn-lg" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
+                            <a class="btn btn-success btn-lg" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-secondary btn-lg" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
+                            <a class="btn btn-info btn-lg" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
                     </tr>
