--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %}
 	<div class="container-fluid mb-100">
-		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
-		<img class="img-center" src="{{asset('/images/azertylogo.png')}}"/>
+		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
+		<img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
 		<h1 class="mt-3">Formulaire de dépôt d’appareils informatiques</h1>
 		<div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
 			
