--- a/templates/prioritaire/index.html.twig
+++ b/templates/prioritaire/index.html.twig
@@ -43,9 +43,9 @@
                         <td>{{ prioritaire.appareil.ns }} </td>
                         <td>{{ prioritaire.appareil.mdp }} </td>
                         {% if prioritaire.appareil.chargeur == 1 %}
-                        <td> <img  class='check' src="{{asset('/images/check.png')}}"/></td>
+                        <td> <img  class='check' src="{{asset('./images/check.png')}}"/></td>
                         {% else %}
-                        <td>  <img  class='cross' src="{{asset('/images/cross.png')}}"/></td>
+                        <td>  <img  class='cross' src="{{asset('./images/cross.png')}}"/></td>
                         {% endif %}
                         {% if prioritaire.appareil.editeur.etat.statut is defined %}
                         <td>{{ prioritaire.appareil.editeur.etat.statut}}</td>
@@ -55,7 +55,7 @@
                         <td class="td-button">
                             {{ include('prioritaire/_delete_form.html.twig') }}
                             
-                            <a class="btn btn-success btn-lg"href="{{ path('client_show', {'id': prioritaire.appareil.client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-success btn-lg"href="{{ path('client_show', {'id': prioritaire.appareil.client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
                         </td>
                     </tr>
                 {% else %}
@@ -67,7 +67,7 @@
             </table>
             
             
-            <a  class="btn btn-success btn-lg" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+            <a  class="btn btn-success btn-lg" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('./images/icon-add.png')}}"/></a>
         </div>
         {% include 'layout/footer.html.twig' %}
 
