--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -62,7 +62,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="11">no records found</td>
+                        <td colspan="12" class='white'>En attente de clients...</td>
                     </tr>
                     {% endfor %}
                 </tbody>
