--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -130,7 +130,7 @@
 
 	</div>
 	</div>
-	<div class="loading" id="loading">
+	<div class="loading" id="loadingDepot">
 		<div class="loadingio-spinner-bean-eater-9bccoyxbzpc">
 			<div class="ldio-rd9g19yom4p">
 				<div><div></div><div></div><div></div></div><div><div></div><div></div><div></div></div>
