--- a/templates/prioritaire/_delete_form.html.twig
+++ b/templates/prioritaire/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" class='inline' action="{{ path('prioritaire_delete', {'id': prioritaire.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class='inline' action="{{ path('prioritaire_delete', {'id': prioritaire.id}) }}" onsubmit="return confirm('Voulez-vous vraiment retirer ce client de la liste des prioritaire ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ prioritaire.id) }}">
     <button class="btn btn-warning btn-lg"><img class="delete" src="{{asset('/images/icon-moins.png')}}"/></button>
 </form>
