--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -16,6 +16,9 @@
           <a class="nav-link" aria-current="page" href="{{ path('user_index') }}"> Utilisateurs </a>
         </li>
         {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{{ path('app_appel_index') }}">Rappel</a>
+        </li>
       </ul>
       <ul class="navbar-nav  d-flex" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
