--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,9 @@
 		@import url("interne/appel/new.css");
 		/*index*/
 		@import url("interne/appel/index.css");
+	/*rdv*/
+		/*index*/
+		@import url("interne/rdv/index.css");
 /*public*/
 @import url("public/index.css");
 	/*loader*/
@@ -22,4 +25,3 @@
 	@import url("public/checkmaker.css");
 /*base*/
 @import url("base.css");
-
