add annuler rdv for the client & add link in the email for the client

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,5 +23,7 @@
 	@import url("public/loader.css");
 	/*checkmaker*/
 	@import url("public/checkmaker.css");
+	/*depot*/
+	@import url("public/depot.css");
 /*base*/
 @import url("base.css");
