--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -9,7 +9,7 @@
 		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
 		<img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
 		<h1 class="mt-3">Formulaire de dépôt d’appareils informatiques</h1>
-		<div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
+		<div class="card carddepot">
 			
 		{{ form_start(form,{ 'attr': { 'class' : 'form-material form cacher ' } })}}
 		<h2>Informations clients</h2>
@@ -125,7 +125,7 @@
 				<div class="alert alert-success center" role="alert" id="sucess">
 					<span>{{message}}<span>
 				</div>
-			{% endfor %}
+		{% endfor %}
 		</div>
 
 	</div>
