--- a/templates/emails/redemande_rdv.html.twig
+++ b/templates/emails/redemande_rdv.html.twig
@@ -1,12 +1,12 @@
 <h3>Changement de date d'intervention à domicile</h3>
 <p>Bonjour, {{nom}} {{prenom}} </p>
 <p>
-    Nous avons bien reçu votre demande d'intervention à l'adresse : {{ adresse }} , toutefois nous vous sugerons une nouvelle date d'intervention : 
+    Nous avons bien reçu votre demande d'intervention à l'adresse : {{ adresse }} , toutefois nous vous suggerons une nouvelle date d'intervention : 
 </p>
 <p>
  <div style="font-size : 21 ; font-weight : bold; color : red;"> {{date|date('d F Y  H:i')|format_datetime('long', 'short',locale='fr')}}</div>  
 <p>
-   Si cette date vous convient merci de nous confirmer ou non votre demande en repondant à ce mail ou en appelant au 01.34.15.52.32
+   Si cette date vous convient merci de nous confirmer en cliquant <a href="{{path('app_rdv_show', {'id': id})}}" >ici</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
 --------------------------------
 </p>
