--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{{ path('app_appel_index') }}">Rappel</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{{ path('app_rdv_index') }}">Rdv</a>
+        </li>
       </ul>
       <ul class="navbar-nav  d-flex" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
