--- a/templates/rdv/index.html.twig
+++ b/templates/rdv/index.html.twig
@@ -19,6 +19,7 @@
             <div class="col">
                 {% for rdv in rdvs| sort((a, b) => a.date <=> b.date) %}
                     {% if rdv.do != 1 %}
+                        {% set annulation = '' %}
                         {% set confirmer = '' %}
                         {% set sugestion = '' %}
                         <div class="zoom ">
@@ -31,6 +32,12 @@
                             {% elseif rdv.confirmer == 3 %}
                                 <div class="card cardRdv mb-3 bg-green">
                                 {% set confirmer = 'Confirmer par le client' %}
+                            {% elseif rdv.confirmer == 4 %}
+                                <div class="card cardRdv mb-3 bg-orange" >
+                                {% set sugestion = 'Nouvelle suggestion client' %}
+                            {% elseif rdv.confirmer == 5 %}
+                                <div class="card cardRdv mb-3" >
+                                {% set annulation = 'Annuler' %}
                             {% else %}
                                 <div class="card cardRdv mb-3" >
                             {% endif %}
@@ -40,6 +47,7 @@
                                     {{ include('rdv/check_form.html.twig') }}
                                         <span class="badge bg-success">{{confirmer}}</span> 
                                         <span class="badge bg-warning" style="background-color: #c2820b;">{{sugestion}}</span> 
+                                        <span class="badge bg-secondary" >{{annulation}}</span> 
                                     </h5>
                                     <h5 class="card-title">
                                         {{ rdv.nom|upper }} {{ rdv.prenom|capitalize }}
@@ -75,15 +83,16 @@
             <div class="col">
             {% for rdv in rdvs| sort((a, b) => b.date <=> a.date) %}
                 {% if rdv.do %}
-                    {% set confirmer = '' %}
-                    {% set sugestion = '' %}
+                    {% set annulation = '' %}   
                     <div class="zoom ">
                         <div class="card cardRdv mb-3" >
                             <div class="card-body">
                                 <h5 class="card-title">
+                                {% if rdv.confirmer == 5 %}
+                                    {% set annulation = 'Annuler' %}
+                                {% endif %}
                                 {{ include('rdv/check_form.html.twig') }}
-                                    <span class="badge bg-success">{{confirmer}}</span> 
-                                    <span class="badge bg-warning" style="background-color: #c2820b;">{{sugestion}}</span> 
+                                    <span class="badge bg-secondary ">{{annulation}}</span> 
                                 </h5>
                                 <h5 class="card-title">
                                     {{ rdv.nom|upper }} {{ rdv.prenom|capitalize }}
